# cycls

./: .gitignore  AGENTS.md  CLAUDE.md  CYCLS-CLI.md  CYCLS.md  README.md  agent-cycls.py  agent-deploy.py  agentUI-files-api.patch  agentUI-org-switcher.patch  agentUI-server-sessions.patch  pyproject.toml  sync-theme.sh
.github/workflows/: build-base-images.yml  tests.yml
client/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.setup.ts
client/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
cycls/: __init__.py  agent.py  app.py  chat.py  claude.py  cli.py  codex.py  data.py  function.py  llm.py  models.py  runtime.py  sdk.py  skills.py  state.py  tools.py  ui.py  web.py
cycls/_agent/: __init__.py  main.py  mcp.py  state.py
cycls/_app/: auth.py  main.py
cycls/_function/: image.py  main.py  remote.py  schedule.py  volume.py
cycls/agent/: __init__.py  chat.py  compact.py  logs.py  main.py  openai.py  prompts.py  sessions.py  share.py  state.py  tools.py
cycls/app/: __init__.py  auth.py  db.py  main.py  og.py  sandbox.py  share.py  signing.py  state.py  store.py  tenancy.py  web.py  workspace.py
cycls/db/: __init__.py  main.py
cycls/dev-theme/: index.html
cycls/function/: __init__.py  image.py  main.py  remote.py
cycls/grpc/: __init__.py  client.py  runtime.proto  runtime_pb2.py  runtime_pb2_grpc.py  server.py
docs/: agent-design.md  agent.md  analytics.md  attachments-api.md  claude-sdk-production-report.md  cli.md  config.md  cron.md  database-scalability.md  db.md  expo-port.md  files-api.md  files.md  front-end-config.md  function.md  log-analytics.md  marketing-preview.md  migration-rfc002-kv.md  new-infra.md  rfc-001-primitives.md  rfc-002-data-primitives.md  rfc-002-forward-compat.md  rfc-002-impl-I.md  rfc-002-impl-II.md  rfc-003-fe-gaps.md  rfc-003.md  rfc-004-provider-parity.md  rfc-workspaces.md  runtime.md  sandbox-network-fix.md  sandbox-security.md  sandbox.md  sandboxing.md  state.md  streaming-protocol.md  tutorial.md  volume.md  workspaces.md
examples/: add.py  agent-deploy.py  agent-gemini.py  agent-local.py  agent-modal.py  agent-openai.py  fast.py  monte_carlo.py  native-components.py  openai-chat.py  utils.py
images/: python3.12.Dockerfile
scripts/: migrate_kv_state.py
tests/: agent_app_test.py  agent_test.py  app_test.py  conftest.py  data_test.py  db_test.py  function_test.py  guard_test.py  pdf_test.py  runtime_test.py  share_test.py  state_test.py  web_test.py
(+270 files in other folders)
