[tool.poetry]
name = "cycls"
version = "0.0.2.70"

packages = [{ include = "cycls" }]
include = ["cycls/theme/**/*"]
description = "Distribute Intelligence"
authors = ["Mohammed J. AlRujayi <mj@cycls.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
httpx = "^0.27.0"
pyjwt = "^2.8.0"
docker = "^7.1.0"
cloudpickle = "^3.1.1"

[tool.poetry.extras]
modal = ["modal"]

[tool.poetry.dependencies.modal]
version = "^1.1.0"
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"