[project]
name = "cycls"
version = "0.0.2.106"
description = "Distribute Intelligence"
authors = [{ name = "Mohammed J. AlRujayi", email = "mj@cycls.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "docker>=7.1.0",
    "cloudpickle>=3.1.1",
    "uvicorn>=0.30.0",
    "email-validator>=2.0.0",
    "watchfiles>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
cycls = "cycls.cli:main"

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cycls"]

[tool.hatch.build.targets.sdist]
include = ["cycls/**/*"]
