[project]
name = "cycls"
version = "0.0.2.135"
description = "Single process, per-tenant, serverless, and stateful AI agent runtime."
authors = [{ name = "Mohammed J. AlRujayi", email = "mj@cycls.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "docker>=7.1.0",
    "cloudpickle>=3.1.1",
    "watchfiles>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cycls = "cycls.cli:main"

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "python-multipart>=0.0.6",
    "anthropic>=0.40.0",  # for --live tests against the real API
    "openai>=1.0.0",      # for --live tests against the real OpenAI API
    "hypercorn>=0.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["cycls/agent/web/themes/"]

[tool.hatch.build.targets.wheel]
packages = ["cycls"]

[tool.hatch.build.targets.sdist]
include = ["cycls/**/*"]
